--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "files.associations": {
-        "iosfwd": "cpp",
-        "stdexcept": "cpp"
-    }
+  "files.associations": {
+    "iosfwd": "cpp",
+    "stdexcept": "cpp"
+  },
+  "cmake.configureOnOpen": true
 }
